<resources>
    <string name="app_name">Projects</string>
    <string name="back_button">Back Button</string>
    <string name="projects">Projects</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? sign up here</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="signup_password">SignUp Password</string>
    <string name="signup_email">SignUp Email</string>
    <string name="full_name">Full Name</string>
    <string name="categories">Categories</string>
    <string name="expand_all">Expand All</string>
    <string name="urgent">Urgent</string>
    <string name="add_category">Add Category</string>
    <string name="photo">Photo</string>
    <string name="date">Date</string>
    <string name="enter_date_yyyy_mm_dd">Enter Date (YYYY-MM-DD)</string>
    <string name="start_time">Start Time</string>
    <string name="enter_start_time_hh_mm">Enter Start Time (HH:MM)</string>
    <string name="end_time">End Time</string>
    <string name="enter_end_time_hh_mm">Enter End Time (HH:MM)</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter Description</string>
    <string name="category">Category</string>
    <string name="add_photo">Add Photo</string>
    <string name="submit">Submit</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="home">Home</string>
    <string name="timesheet">Timesheet</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="logout">LogOut</string>
    <string name="share">Share</string>
    <string name="tools">Tools</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="communication">Communication</string>
</resources>